web/app/themes/topiclisting/assets/css/admin-style.css
/* Center the field group title horizontally and style it */
.acf-postbox > .acf-fields > .acf-field-tab > .acf-label,
.acf-postbox h2.hndle {
  width: 100%!important;
  max-width: 800px!important;
  margin: 0 auto 2rem auto !important;
  padding-left: 1rem;
  padding-top: 1.5rem !important;
  font-size: 1.8rem !important;
  font-weight: 700!important;
  text-align: left;
}


/* Main .inside */
.acf-postbox .inside {
  display: flex !important;
  flex-direction: column !important;
  align-items: center !important;
  padding: 0 !important;

}


.acf-postbox{
  margin-bottom: 5rem !important;
}


/* Each ACF field block */
.acf-postbox .acf-field {
  width: 100%;
  max-width: 800px;
  margin-bottom: 24px;
}

/* Header for the field group */
.acf-postbox h2.hndle {
  text-align: center;
  font-size: 1.5rem;
  margin-bottom: 2rem;
}

.acf-label label {
  font-size: 14px;
  font-weight: 600;
}

